# internal/api/schema/schema.go
@@ -20,7 +20,19 @@ type ListPost struct {
 	Title         string     `json:"title"`
 	Summary       string     `json:"summary"`
 	UpdatedAt     time.Time  `json:"updatedAt"`
-	PublishedAt   time.Time  `json:"publishedAt"`
+	PublishedAt   time.Time  `json:"publishedAt,omitempty"`
 	Categories    []Category `json:"categoryList"`
 	CommentsCount int64      `json:"commentsCount"`
+}
+
+type Post struct {
+	ID            int64      `json:"id"`
+	Author        User       `json:"author"`
+	Title         string     `json:"title"`
+	Summary       string     `json:"summary"`
+	UpdatedAt     time.Time  `json:"updatedAt"`
+	PublishedAt   time.Time  `json:"publishedAt,omitempty"`
+	Categories    []Category `json:"categoryList"`
+	CommentsCount int64      `json:"commentsCount"`
+	Content       string     `json:"content"`
 }
